# RAL-GWC-CONUS

./: README.md  create_derecho_env.sh  pyproject.toml
_PAPER/data_prep_CESM2_LENS/: DATA00_CESM2_CMIP6_daily_gather.ipynb  DATA00_CESM2_CMIP6_gather.ipynb  DATA00_CESM2_CMIP6_verif_gather.ipynb  DATA00_CESM2_SSP370_daily_gather.ipynb  DATA00_CESM2_SSP370_gather.ipynb  DATA00_CESM2_SSP370_verif_gather.ipynb  DATA00_CESM2_gather.ipynb  PBS00_CESM_batch_runs.ipynb  qsub_DATA00_CESM.ipynb
_PAPER/data_prep_CONUS404/: DATA00_data_workflow_ERA5_boundary.ipynb  DATA00_data_workflow_native_grid.ipynb  DATA01_grid_area_compute.ipynb  DATA01_static_file_native_grid.ipynb  DATA02_pack_1h_CONUS404.ipynb  DATA03_ERA5_interp.ipynb  DATA04_C404_dscale_data_prep.ipynb  OPT00_GFS_and_GDAS.ipynb  OPT00_create_mean_std_files.ipynb  OPT00_create_mean_std_files_baseline.ipynb  OPT01_create_residual_coeff_files.ipynb  OPT02_create_residual_std_norm_files.ipynb  OPT02_variable_weights.ipynb  data_config_ERA5.yml  data_config_WRF.yml  data_config_dscale.yml  domain_native_grid.ipynb  qsub_DATA00_C404_1h.ipynb  qsub_DEV00_compute_mean_std.ipynb  qsub_DEV01_compute_residual_std.ipynb
applications/: WRF_pred_future.py  WRF_pred_metrics.py  WRF_train.py  WRF_train_multi.py  diag_pred_metrics.py  diag_train.py  dscale_pred_metrics.py  dscale_train.py  rollout_metrics.py
credit/: __init__.py  boundary_padding.py  data.py  forecast.py  interp.py  loss.py  metrics.py  mixed_precision.py  output.py  parser.py  pbs.py  postblock.py  regrid.py  scheduler.py  seed.py  xr_sampler.py
(+91 files in other folders)
