[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "miles-credit"
authors = [{name = "NCAR Machine Integration and Learning for Earth Systems (MILES)", email = "miles@ucar.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "cartopy",
    "scikit-learn",
    "pyarrow",
    "pytest",
    "pysteps",
    "xarray",
    "netcdf4",
    "h5netcdf",
    "torch",
    "torchvision",
    "pyyaml",
    "cartopy",
    "dask",
    "distributed",
    "dask-jobqueue",
    "zarr",
    "einops",
    "echo-opt",
    "bridgescaler",
    "segmentation-models-pytorch",
    "haversine",
    "pvlib",
    "torch-harmonics",
    "torch_geometric",
    "pre-commit",
    "ruff",
    "sphinx",
    "sphinx-autoapi",
    "myst_parser",
    "sphinx-book-theme",
    "fsspec",
    "gcsfs",
    "miles-guess",
    "keras",
    "metpy"
   ]

[tool.setuptools]
packages = ["credit", "credit.models", "credit.metadata", "credit.datasets", "credit.trainers", "credit.losses", "credit.transforms"]

[tool.setuptools.dynamic]
version = {file = "credit/VERSION"}


